# controller/user_controlle.go
@@ -3,6 +3,7 @@ package controller
 import (
 	config "BlockApp/conf"
 	"BlockApp/db"
+	"BlockApp/middleware"
 	"BlockApp/model"
 	"github.com/gin-gonic/gin"
 	"github.com/golang-jwt/jwt/v4"
@@ -12,11 +13,6 @@ import (
 )
 
 type UserController struct {
-}
-
-type Creds struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
 }
 
 // 生成JWT Token
@@ -29,44 +25,54 @@ func generateToken(username string) (string, error) {
 	return token.SignedString(config.Config.System.GetJwtSecret())
 }
 
+type LoginRequest struct {
+	Username string `json:"username" example:"admin"`
+	Password string `json:"password" example:"123456"`
+}
+
+// LoginResponse 登录响应结构体
+type LoginResponse struct {
+	Token string `json:"token"`
+}
+
 // UserLogin 用户登录
 // @Summary 用户登录
 // @Description 通过用户名和密码进行登录，并返回 JWT Token
 // @Tags User
 // @Accept json
 // @Produce json
-// @Param request body Creds true "用户登录信息"
+// @Param request body LoginRequest true "用户登录信息"
 // @Success 200 {object} map[string]string "返回 Token"
 // @Failure 400 {object} map[string]string "请求错误"
 // @Failure 404 {object} map[string]string "用户不存在"
 // @Failure 500 {object} map[string]string "服务器错误"
 // @Router /v1/login [post]
 func (uc *UserController) UserLogin(ctx *gin.Context) {
-	var creds Creds
-	if err := ctx.ShouldBindJSON(&creds); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request"})
+	var req LoginRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "请求参数错误"})
 		return
 	}
-	var user = model.User{Name: creds.Username}
+	var user = model.User{Name: req.Username}
 	// 校验用户名密码
-	result := db.PgsqlDB.First(&user, "name = ?", creds.Username)
+	result := db.PgsqlDB.First(&user, "name = ?", req.Username)
 	if result.Error != nil {
 		ctx.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
 		return
 	}
 	// 使用bcrypt库对密码进行校验
-	if err := bcrypt.CompareHashAndPassword([]byte(user.PassWord), []byte(creds.Password)); err != nil {
+	if err := bcrypt.CompareHashAndPassword([]byte(user.PassWord), []byte(req.Password)); err != nil {
 		ctx.JSON(http.StatusUnauthorized, gin.H{"error": "Wrong username or password"})
 		return
 	}
 	// 生成Token
-	token, err := generateToken(creds.Username)
+	token, err := middleware.GenerateToken(req.Username)
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Could not generate token"})
 		return
 	}
 
-	ctx.JSON(http.StatusOK, gin.H{"token": token})
+	ctx.JSON(http.StatusOK, LoginResponse{Token: token})
 }
 
 // UserRegister 用户注册
@@ -75,25 +81,25 @@ func (uc *UserController) UserLogin(ctx *gin.Context) {
 // @Tags User
 // @Accept json
 // @Produce json
-// @Param request body Creds true "用户注册信息"
+// @Param request body LoginRequest true "用户注册信息"
 // @Success 200 {object} map[string]string "注册成功"
 // @Failure 400 {object} map[string]string "请求错误"
 // @Failure 500 {object} map[string]string "服务器错误"
 // @Router /v1/register [post]
 func (uc *UserController) UserRegister(ctx *gin.Context) {
-	var creds Creds
-	if err := ctx.ShouldBindJSON(&creds); err != nil {
+	var req LoginRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request"})
 		return
 	}
-	var user = model.User{Name: creds.Username}
+	var user = model.User{Name: req.Username}
 	// 校验用户名密码
-	result := db.PgsqlDB.First(&user, "name = ?", creds.Username)
+	result := db.PgsqlDB.First(&user, "name = ?", req.Username)
 	if result.Error == nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": "User is exited"})
 		return
 	}
-	_password, err := bcrypt.GenerateFromPassword([]byte(creds.Password), bcrypt.DefaultCost)
+	_password, err := bcrypt.GenerateFromPassword([]byte(req.Password), bcrypt.DefaultCost)
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Could not generate password"})
 		return
@@ -108,6 +114,6 @@ func (uc *UserController) UserRegister(ctx *gin.Context) {
 
 }
 
-func protectedHandler(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{"message": "Welcome to the protected area!"})
+func (uc *UserController) Create(ctx *gin.Context) {
+	ctx.JSON(http.StatusNotImplemented, gin.H{"error": "Not implemented"})
 }
