# router/block_routers.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	"BlockApp/controller"
+	"BlockApp/middleware"
 	"github.com/gin-gonic/gin"
 )
 
@@ -11,6 +12,7 @@ var (
 
 func InitBlockRoutes(r *gin.Engine) gin.IRoutes {
 	blockModel := r.Group("/v1")
+	blockModel.Use(middleware.JWTAuthMiddleware())
 	blockModel.GET("/blockModel", Block.GetBlocBModel)
 	return r
 }
